[package]
name = "yun-socket-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时
tokio = { version = "1.42", features = ["full"] }

# 网络和 I/O
bytes = "1.9"
futures = "0.3"

# 配置管理
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
thiserror = "2.0"
anyhow = "1.0"

# 命令行参数
clap = { version = "4.5", features = ["derive"] }
